# council-tax-freeze-analysis

./: .gitignore  DATA.md  LICENSE  Makefile  README.md  SENSITIVITY_PREREGISTRATION.md  SENSITIVITY_RESULTS.md  pyproject.toml
notebooks/: 01_data.ipynb  02_method.ipynb  03_results.ipynb
src/council_tax_freeze/: aggregates.py  config.py  download.py
src/council_tax_freeze/boundaries/: crosswalk.py  lad_2025.py  precepting_groups.py  regions.py  reorg_events.py
src/council_tax_freeze/calibration/: price_paid.py
src/council_tax_freeze/engine/: build.py
src/council_tax_freeze/hpi/: build.py
src/council_tax_freeze/parsers/band_d/: parse.py
src/council_tax_freeze/parsers/ctsop/: parse.py
src/council_tax_freeze/parsers/settlement/: parse.py
src/council_tax_freeze/regression/: variant3.py
src/council_tax_freeze/sensitivity/: sweep.py
src/council_tax_freeze/viz/: choropleth.py
tests/: test_aggregates.py  test_band_d.py  test_boundaries.py  test_config.py  test_ctsop.py  test_engine.py  test_hpi.py  test_price_paid_calibration.py  test_sensitivity.py  test_settlement.py  test_variant3.py
