[project]
name = "council-tax-freeze"
version = "0.1.0"
description = "How much would English local authorities have paid under a periodically revalued council tax, 2000-01 to 2025-26?"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "openpyxl>=3.1",   # .xlsx (modern MHCLG/VOA releases)
    "xlrd>=2.0",       # legacy .xls (early-2000s releases)
    "odfpy>=1.4",      # .ods (a handful of vintages)
    "requests>=2.31",
    "tqdm>=4.66",
    "geopandas>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mapclassify>=2.6", # choropleth classification
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jupyterlab>=4.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council_tax_freeze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
